--- a/index.html
+++ b/index.html
@@ -5,16 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pizza Papi - Pizzeria familiale à Tahiti</title>
     <meta name="description" content="Pizza Papi - Pizzeria familiale et conviviale à Tahiti. Découvrez nos pizzas locales et traditionnelles dans nos deux restaurants." />
-    <meta name="author" content="Lovable" />
 
     <meta property="og:title" content="papi-tahiti-pizzas-web" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:description" content="Pizzerias à Tahiti ouvertes tous les jours à Papara, Teva et Taiarapu" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/lovable-uploads/logo.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="Pizzerias à Tahiti ouvertes tous les jours à Papara, Teva et Taiarapu" />
+    <meta name="twitter:image" content="/lovable-uploads/logo.png" />
   </head>
 
   <body>
