--- a/public/404.html
+++ b/public/404.html
@@ -4,6 +4,6 @@
     <meta http-equiv="refresh" content="0; url=/pizza-papi/" />
   </head>
   <body>
-    <p>Redirecting...</p>
+    <p>Redirection...</p>
   </body>
 </html>
