--- a/index.html
+++ b/index.html
@@ -1,19 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Pizza Papi - Pizzeria familiale à Tahiti</title>
-    <meta name="description" content="Pizza Papi - Pizzeria familiale et conviviale à Tahiti. Découvrez nos pizzas locales et traditionnelles dans nos deux restaurants." />
+    <title>Pizza Papi - Pizzerias familiales à Tahiti</title>
+    <meta name="description" content="Pizzerias à Tahiti. Découvrez nos pizzas locales et traditionnelles dans nos trois restaurants." />
 
     <meta property="og:title" content="papi-tahiti-pizzas-web" />
     <meta property="og:description" content="Pizzerias à Tahiti ouvertes tous les jours à Papara, Teva et Taiarapu" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="/lovable-uploads/logo.png" />
+    <meta property="og:image" content="https://keysper-company.github.io/pizza-papi/lovable-uploads/logo.png"
+     />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="Pizzerias à Tahiti ouvertes tous les jours à Papara, Teva et Taiarapu" />
-    <meta name="twitter:image" content="/lovable-uploads/logo.png" />
+    <meta name="twitter:image" content="https://keysper-company.github.io/pizza-papi/lovable-uploads/logo.png"/>
   </head>
 
   <body>
