--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Pizza Papi - Pizzerias familiales à Tahiti</title>
     <meta name="description" content="Pizzerias à Tahiti. Découvrez nos pizzas locales et traditionnelles dans nos trois restaurants." />
 
-    <meta property="og:title" content="papi-tahiti-pizzas-web" />
+    <meta property="og:title" content="Pizza Papi - Tahiti" />
     <meta property="og:description" content="Pizzerias à Tahiti ouvertes tous les jours à Papara, Teva et Taiarapu" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://keysper-company.github.io/pizza-papi/lovable-uploads/logo.png"
